# Acoustic_BEM

./: BEM_integration_tri.ipynb  Demo_monompole_C_vs_DC.ipynb  Demo_monopole.ipynb  Demo_monopole_BOX.ipynb  Demo_monopole_HS.ipynb  Demo_monopole_freq_sweep.ipynb  Demo_pokrov.ipynb  dev_notebook.ipynb  patch.diff  profiling.ipynb  pyproject.toml  requirements.txt  setup.py
acoustic_BEM/: __init__.py  geometry.py  integrators.py  kernels.py  matrix_assembly.py  mesh.py  quadrature.py  solve.py
acoustic_BEM/elements/: __init__.py
examples/: basic_example.py
source/: __init__.py  __main__.py  core.py  integrators.py  kernels.py  matrix_assembly.py  mesh.py  quadrature.py  solve.py
tests/: test_basic.py
