[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acoustic-BEM"
version = "0.1.0"
authors = [{name = "Krištof Čufar", email = "kristof.cufar@domel.si"}]
maintainers = [{name = "Krištof Čufar", email = "kristof.cufar@domel.si"}]
license = "MIT"
description = "Boundary Element Method tools for acoustic problems."
readme = "README.rst"
keywords = ["acoustic", "BEM", "boundary element method"]
requires-python = ">=3.10"

# Dependency management (these must be installed for the package to work)
dependencies = [
    "numpy>=1.11.0",
    "scipy>=1.2.0",
    "matplotlib>=3.0.0",
    "pyMRAW>=0.2.0",
    "tqdm>=4.25.0",
    "pyvista[jupyter]"
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Researchers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "build",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
homepage = "https://github.com/kristofcufar/Acoustic_BEM"
documentation = "https://github.com/kristofcufar/Acoustic_BEM"
source = "https://github.com/kristofcufar/Acoustic_BEM"

# Define the files that are included in the wheel
[tool.hatch.build.targets.wheel]
include = ["acoustic_BEM/*"]

# Define the files that are included in the source distribution (tar.gz)
[tool.hatch.build.targets.sdist]
include = [
    "acoustic_BEM/*"
]